# DSS_KedroWorkshop

./: .gitignore  1. Data Cleaning.ipynb  2. Model Training.ipynb  3. Model Evaluation.ipynb  LICENSE  README.md  requirements.txt
training-project/: README.md  pyproject.toml
training-project/src/training_project/: __init__.py  __main__.py
